# composable-future

./: .gitignore  CONTRIBUTING.md  README  README.md  TODO.md  pyproject.toml  refinement.py  search.py
.github/: CLAUDE.md
audit/: domain-1-category-theory.md  domain-2-paradigm-change.md  domain-3-process-algebra.md  domain-4-affordance-theory.md  domain-5-futures-formalization.md  gap-summary.md
docs/: constraints.md
docs/adr/: 0001-record-proof-decisions.md  0002-trajectory-enrichment.md  0003-noncommutativity-strategy.md  0004-pmf-mathlib-upgrade.md  0005-restore-4tuple.md
lean/: ComposableFuture.lean  lake-manifest.json  lakefile.lean
lean/.lake/config/[anonymous]/: lakefile.olean  lakefile.olean.trace
lean/ComposableFuture/Core/: Affordance.lean  Effect.lean  Equivalence.lean  Future.lean  Indexed.lean  Laws.lean  Operators.lean  Probabilistic.lean  Stateless.lean  WeakAssoc.lean
lean/Core/: Future.lean  Laws.lean  Operators.lean  Probabilistic.lean
paper/: compile.txt  composable-future-level1.tex  composable-future.bib  composable-future.tex  references.bib
proofs/: attempt-associativity.md  notes.md  stateless-case.md  systematic-review-results.md
