[project]
name = "composable-future"
version = "0.1.0"
description = "A formal theory of paradigmatic futures as composable algebraic structures"
authors = [{name = "Kade", email = "kade@example.com"}]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "arxiv>=2.1.3", 
    "rich>=13.7.0",
]

[project.scripts]
search = "search:main"
refine = "refinement:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "search.py",
    "refinement.py",
]
